Fix: comment, post & profile-data adding Forms; NavBar z-index now higher

--- a/src/app/comment-form/comment-form.component.css
+++ b/src/app/comment-form/comment-form.component.css
@@ -3,7 +3,7 @@
     width: 60%;
     height: fit-content;
     background-color: whitesmoke;
-    margin: 10px auto 10px 73px;
+    margin: 10px auto 10px 9%;
 }
 
 #comment-form-wrapper *{
