--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -27,7 +27,7 @@
     flex-wrap: nowrap;
     
     width: 80%;
-    height: 55vh;
+    height: 56vh;
     border: 2px #FFFFFF solid;
     border-radius: 30px;
     margin: 15px auto;
